# Capstone_Design_Project_1_TEAM7

./: .gitattributes  .gitignore  OpenFace의 시선 추적 데이터를 추출하는 실행 명령어  README.md  convert.py  cv.py  data.yaml  evaluate_map.py  filter1.py  filter2.py  finetuning.py  gaze.py  look_phone_labeler.py  run_onnx_model.py  train_new.py  차량영상 링크.txt
Dangerous Object Use Detectors/Test/: main.cpp
Dangerous Object Use Detectors/Test/x64/Debug/Test.tlog/: CL.read.1.tlog
Dangerous Object Use Detectors/Test/x64/Release/: Test.exe.recipe
Dangerous Object Use Detectors/Test/x64/Release/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Test/: Test.sln
Test/Test/: Test.vcxproj  main.cpp
Test/Test/x64/Debug/: vc143.idb
Test/Test/x64/Debug/Test.tlog/: CL.command.1.tlog  CL.write.1.tlog  Test.lastbuildstate
Test/Test/x64/Release/: Test.exe.recipe
Test/Test/x64/Release/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+7 more)
Test/x64/Debug/: CameraEnumerator.idb  CameraEnumerator.lib  FaceAnalyser.idb  GazeAnalyser.idb  GazeAnalyser.lib  Utilities.idb
YOLO/: CMakeLists.txt  README.md  inference.cpp  inference.h  main.cpp
runs/train/driver_phone_train_v1/: args.yaml  results.csv
src/: Visualizer.cpp  main.cpp
관련 자료 정리/: ~$ 데이터, 논문 정리.docx  종프 논문 정리.docx  종프 데이터, 논문 정리.docx  종프1 데이터셋 및 논문 정리.docx
관련 자료 정리/personal/: run_onnx_model 2.py  간트차트 링크.txt
관련 자료 정리/personal/관련 자료 정리/: 종프 데이터, 논문 정리.docx
프로토타입 초안/: gaze_tracker.py  필요한 것들.txt
